fixed some bugs and fixed errors with sonarqube.